--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Israel Delivery</title>
     <link rel="icon" href="delivery_logo.jpg" type="image/jpeg">
+    <meta property="og:title" content="Israel Delivery">
+    <meta property="og:description" content="Experience the most comprehensive, professional, and reliable delivery service across Israel.">
+    <meta property="og:image" content="https://israeldelivery.github.io/TrustedDeliveryIL/delivery_logo.jpg">
+    <meta property="og:url" content="https://israeldelivery.github.io/TrustedDeliveryIL">
+    <meta name="twitter:card" content="summary_large_image">
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -22,12 +26,13 @@
         }
         header img {
             width: 100%;
+            height: auto;
             max-height: 400px;
             object-fit: cover;
         }
         .logo {
             text-align: center;
-            margin: 50px auto 10px auto; /* הרחקת הלוגו מהבאנר */
+            margin: 50px auto 10px auto;
         }
         .logo img {
             width: 150px;
@@ -42,19 +47,19 @@
             flex: 1;
         }
         section h1 {
-            font-size: 36px;
-            margin-top: 10px; /* קרוב יותר ללוגו */
+            font-size: 2em;
+            margin-top: 10px;
             margin-bottom: 20px;
             color: #333;
         }
         section p {
-            font-size: 18px;
+            font-size: 1em;
             line-height: 1.6;
             margin-bottom: 40px;
             color: #555;
         }
         .contact-info p {
-            font-size: 16px;
+            font-size: 1em;
             margin: 10px 0;
         }
         form {
@@ -73,33 +78,36 @@
             margin-bottom: 5px;
         }
         form input, form textarea {
-            width: calc(100% - 20px);
+            width: 100%;
             padding: 10px;
             margin-bottom: 15px;
             border: 1px solid #ccc;
             border-radius: 5px;
-            font-size: 16px;
+            font-size: 1em;
         }
         form textarea {
             height: 100px;
         }
-        form input[type="submit"] {
+        form button {
             background-color: #007bff;
             color: #fff;
             border: none;
             cursor: pointer;
-            font-size: 18px;
+            font-size: 1em;
             padding: 10px 20px;
             border-radius: 5px;
+            width: 100%;
         }
         .images {
             display: flex;
             justify-content: center;
             gap: 10px;
-            margin-top: 50px; /* הגדלת הרווח בין הכפתור לתמונות */
+            flex-wrap: wrap;
+            margin-top: 50px;
         }
         .images img {
-            width: 30%;
+            width: 100%;
+            max-width: 150px;
             border-radius: 10px;
         }
         footer {
@@ -125,6 +133,22 @@
         .floating-icons img {
             width: 50px;
             height: 50px;
+        }
+        @media (max-width: 768px) {
+            .logo img {
+                width: 120px;
+                height: 120px;
+            }
+            section h1 {
+                font-size: 1.5em;
+            }
+            form {
+                padding: 10px;
+            }
+            .floating-icons img {
+                width: 40px;
+                height: 40px;
+            }
         }
     </style>
     <!-- Google tag (gtag.js) -->
@@ -152,25 +176,27 @@
             <p>Email: <a href="mailto:israeldelivery2020@gmail.com">israeldelivery2020@gmail.com</a></p>
             <p>Phone: <a href="tel:+0502638644">050-263-8644</a></p>
         </div>
+    </section>
 
-        <form action="https://docs.google.com/forms/d/e/YOUR_GOOGLE_FORM_ID/formResponse" method="post" target="_blank">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="entry.YOUR_NAME_FIELD_ID" required>
-            <br>
+    <section id="contactForm" class="contact">
+        <h2>Contact Us</h2>
+        <form action="https://docs.google.com/forms/d/e/1FAIpQLScZt6agqo2_4OSJsbCurrYFUDznxmaJdCBW3iVO5UVOiYmiQA/formResponse" method="post" target="_self">
+            <label for="name">Name (Required):</label>
+            <input type="text" id="name" name="entry.1200704287" required>
+            <label for="phone">Phone (Required):</label>
+            <input type="tel" id="phone" name="entry.68737920" required>
             <label for="email">Email:</label>
-            <input type="email" id="email" name="entry.YOUR_EMAIL_FIELD_ID" required>
-            <br>
-            <label for="message">Message:</label>
-            <textarea id="message" name="entry.YOUR_MESSAGE_FIELD_ID" required></textarea>
-            <br>
-            <input type="submit" value="Submit">
+            <input type="email" id="email" name="entry.500345010">
+            <label for="comments">Message (Required):</label>
+            <textarea id="comments" name="entry.285978108" required></textarea>
+            <button type="submit">Submit</button>
         </form>
+    </section>
 
-        <div class="images" style="margin-top: 50px;">
-            <img src="image_1.jpg" alt="Image 1">
-            <img src="image_2.jpg" alt="Image 2">
-            <img src="image_3.jpg" alt="Image 3">
-        </div>
+    <section class="images">
+        <img src="image_1.jpg" alt="Image 1">
+        <img src="image_2.jpg" alt="Image 2">
+        <img src="image_3.jpg" alt="Image 3">
     </section>
 
     <footer>
@@ -180,12 +206,6 @@
     <div class="floating-icons">
         <a href="https://wa.me/0502638644?text=Hello%20Israel%20Delivery" target="_blank">
             <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
-        </a>
-        <a href="tel:+0502638644">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Phone_icon_black.svg/512px-Phone_icon_black.svg.png" alt="Call">
-        </a>
-        <a href="https://www.google.com/search?q=Israel+Delivery+reviews" target="_blank">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/13/Star_icon-72a7cf.svg/1200px-Star_icon-72a7cf.svg.png" alt="Google Reviews">
         </a>
     </div>
 </body>
