--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@
             <input type="text" id="name" name="entry.1200704287" required>
             <label for="phone">Phone (Required):</label>
             <input type="tel" id="phone" name="entry.68737920" required>
-            <label for="email">Email:</label>
+            <label for="email">Email (Required):</label>
             <input type="email" id="email" name="entry.500345010">
             <label for="comments">Message (Required):</label>
-            <textarea id="comments" name="entry.285978108" required></textarea>
+            <textarea id="comments" name="entry.285978108" required>Hello, I would like to inquire about your delivery services. Please contact me with more details.</textarea>
             <button type="submit">Submit</button>
         </form>
     </section>
@@ -204,7 +204,7 @@
     </footer>
 
     <div class="floating-icons">
-        <a href="https://wa.me/0502638644?text=Hello%20Israel%20Delivery" target="_blank">
+        <a href="https://wa.me/0502638644?text=Hello%20Israel%20Delivery%2C%20I%20would%20like%20to%20inquire%20about%20your%20delivery%20services.%20Please%20contact%20me%20with%20more%20details." target="_blank">
             <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
         </a>
     </div>
