--- a/index.html
+++ b/index.html
@@ -71,11 +71,15 @@
             text-align: left;
             max-width: 500px;
             width: 100%;
+            box-sizing: border-box;
         }
         form label {
             display: block;
             font-weight: bold;
             margin-bottom: 5px;
+        }
+        form label .required {
+            color: red;
         }
         form input, form textarea {
             width: 100%;
@@ -84,6 +88,7 @@
             border: 1px solid #ccc;
             border-radius: 5px;
             font-size: 1em;
+            box-sizing: border-box;
         }
         form textarea {
             height: 100px;
@@ -107,7 +112,7 @@
         }
         .images img {
             width: 100%;
-            max-width: 150px;
+            max-width: 100px;
             border-radius: 10px;
         }
         footer {
@@ -133,6 +138,14 @@
         .floating-icons img {
             width: 50px;
             height: 50px;
+        }
+        .required-note {
+            margin-top: 15px;
+            font-size: 0.9em;
+            color: #555;
+        }
+        .required-note .required {
+            color: red;
         }
         @media (max-width: 768px) {
             .logo img {
@@ -173,24 +186,25 @@
         <h1>Welcome to Israel Delivery</h1>
         <p>Experience the most comprehensive, professional, and reliable delivery service across Israel. Whether you're sending important documents, valuable packages, or goods of any kind, our top-tier service guarantees fast and secure deliveries. Our dedicated team and advanced logistics ensure your items reach their destination on time and in perfect condition. Trust us to handle all your delivery needs with the utmost care and efficiency. Join our satisfied customers and discover why Israel Delivery is the best choice for all your shipping needs.</p>
         <div class="contact-info">
-            <p>Email: <a href="mailto:israeldelivery2020@gmail.com">israeldelivery2020@gmail.com</a></p>
-            <p>Phone: <a href="tel:+0502638644">050-263-8644</a></p>
+            <p>Email: <a href="mailto:israeldelivery2020@gmail.com?subject=Delivery%20Inquiry&body=Hello%2C%20I%20would%20like%20to%20inquire%20about%20your%20delivery%20services.%20Please%20contact%20me%20with%20more%20details.">israeldelivery2020@gmail.com</a></p>
+            <p>Phone: <a href="tel:+972502638644">+972-50-263-8644</a></p>
         </div>
     </section>
 
     <section id="contactForm" class="contact">
         <h2>Contact Us</h2>
         <form action="https://docs.google.com/forms/d/e/1FAIpQLScZt6agqo2_4OSJsbCurrYFUDznxmaJdCBW3iVO5UVOiYmiQA/formResponse" method="post" target="_self">
-            <label for="name">Name (Required):</label>
+            <label for="name">Name<span class="required">(*</span>)</label>
             <input type="text" id="name" name="entry.1200704287" required>
-            <label for="phone">Phone (Required):</label>
+            <label for="phone">Phone<span class="required">(*</span>)</label>
             <input type="tel" id="phone" name="entry.68737920" required>
-            <label for="email">Email (Required):</label>
-            <input type="email" id="email" name="entry.500345010">
-            <label for="comments">Message (Required):</label>
+            <label for="email">Email<span class="required">(*</span>)</label>
+            <input type="email" id="email" name="entry.500345010" required>
+            <label for="comments">Message<span class="required">(*</span>)</label>
             <textarea id="comments" name="entry.285978108" required>Hello, I would like to inquire about your delivery services. Please contact me with more details.</textarea>
             <button type="submit">Submit</button>
         </form>
+        <div class="required-note">Fields marked with <span class="required">(*</span>) are required.</div>
     </section>
 
     <section class="images">
@@ -204,7 +218,7 @@
     </footer>
 
     <div class="floating-icons">
-        <a href="https://wa.me/0502638644?text=Hello%20Israel%20Delivery%2C%20I%20would%20like%20to%20inquire%20about%20your%20delivery%20services.%20Please%20contact%20me%20with%20more%20details." target="_blank">
+        <a href="https://wa.me/972502638644?text=Hello%20Israel%20Delivery%2C%20I%20would%20like%20to%20inquire%20about%20your%20delivery%20services.%20Please%20contact%20me%20with%20more%20details." target="_blank">
             <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
         </a>
     </div>
