--- a/index.html
+++ b/index.html
@@ -59,9 +59,27 @@
             margin-bottom: 40px;
             color: #555;
         }
-        .contact-info p {
-            font-size: 1em;
-            margin: 10px 0;
+        .contact-info {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-bottom: 40px;
+        }
+        .contact-info a {
+            text-decoration: none;
+            color: #fff;
+            background-color: #007bff;
+            padding: 10px;
+            border-radius: 50%;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: 50px;
+            height: 50px;
+        }
+        .contact-info a img {
+            width: 32px; /* הגדלת הסמלים בתוך העיגולים */
+            height: 32px;
         }
         form {
             background: #fff;
@@ -131,21 +149,6 @@
         footer p {
             margin: 0;
         }
-        .floating-icons {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            display: flex;
-            flex-direction: column;
-        }
-        .floating-icons a {
-            display: block;
-            margin-bottom: 10px;
-        }
-        .floating-icons img {
-            width: 70px; /* הגדלת האייקון של הוואטסאפ */
-            height: 70px;
-        }
         .required-note {
             margin-top: 15px;
             font-size: 0.9em;
@@ -168,9 +171,13 @@
             form {
                 padding: 10px;
             }
-            .floating-icons img {
-                width: 50px; /* גודל מתאים לטלפונים */
-                height: 50px;
+            .contact-info a {
+                width: 40px;
+                height: 40px;
+            }
+            .contact-info a img {
+                width: 28px;
+                height: 28px;
             }
         }
     </style>
@@ -196,8 +203,18 @@
         <h1>Welcome to Israel Delivery</h1>
         <p>Experience the most comprehensive, professional, and reliable delivery service across Israel. Whether you're sending important documents, valuable packages, or goods of any kind, our top-tier service guarantees fast and secure deliveries. Our dedicated team and advanced logistics ensure your items reach their destination on time and in perfect condition. Trust us to handle all your delivery needs with the utmost care and efficiency. Join our satisfied customers and discover why Israel Delivery is the best choice for all your shipping needs.</p>
         <div class="contact-info">
-            <p>Email: <a href="mailto:israeldelivery2020@gmail.com?subject=Delivery%20Inquiry&body=Hello%2C%20I%20would%20like%20to%20inquire%20about%20your%20delivery%20services.%20Please%20contact%20me%20with%20more%20details.">israeldelivery2020@gmail.com</a></p>
-            <p>Phone: <a href="tel:+972502638644">+972-50-263-8644</a></p>
+            <a href="mailto:israeldelivery2020@gmail.com?subject=Delivery%20Inquiry&body=Hello%2C%20I%20would%20like%20to%20inquire%20about%20your%20delivery%20services.%20Please%20contact%20me%20with%20more%20details.">
+                <img src="gmail.png" alt="Email Icon">
+            </a>
+            <a href="tel:+972502638644">
+                <img src="telephone.png" alt="Phone Icon">
+            </a>
+            <a href="https://wa.me/972502638644?text=Hello%20Israel%20Delivery%2C%20I%20would%20like%20to%20inquire%20about%20your%20delivery%20services.%20Please%20contact%20me%20with%20more%20details." target="_blank">
+                <img src="whatsapp.png" alt="WhatsApp Icon">
+            </a>
+            <a href="https://www.google.com/maps/place/?q=place_id:ChIJN1t_tDeuEmsRUsoyG83frY4" target="_blank">
+                <img src="star.png" alt="Google Reviews Icon">
+            </a>
         </div>
     </section>
 
@@ -226,11 +243,5 @@
     <footer>
         <p>Israel Delivery. All rights reserved 2024 ©</p>
     </footer>
-
-    <div class="floating-icons">
-        <a href="https://wa.me/972502638644?text=Hello%20Israel%20Delivery%2C%20I%20would%20like%20to%20inquire%20about%20your%20delivery%20services.%20Please%20contact%20me%20with%20more%20details." target="_blank">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
-        </a>
-    </div>
 </body>
 </html>
