--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
         }
         .logo {
             text-align: center;
-            margin: 50px auto 10px auto;
+            margin: -50px auto 20px auto; /* כוונון המרווח בין הבאנר לבין הלוגו */
         }
         .logo img {
             width: 150px;
             height: 150px;
             border-radius: 50%;
             object-fit: cover;
+            border: 5px solid white; /* מסגרת לבנה סביב הלוגו */
         }
         section {
             padding: 20px 20px;
