--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <a href="https://wa.me/972502638644?text=Hello%20Israel%20Delivery%2C%20I%20would%20like%20to%20inquire%20about%20your%20delivery%20services.%20Please%20contact%20me%20with%20more%20details." target="_blank">
                 <img src="whatsapp.png" alt="WhatsApp Icon">
             </a>
-            <a href="https://g.page/r/CWQ2boX-b6ZxEBM/review" target="_blank">
+            <a href="review.html">
                 <img src="star.png" alt="Google Reviews Icon">
             </a>
         </div>
