--- a/thank_you.html
+++ b/thank_you.html
@@ -38,6 +38,12 @@
     </style>
 </head>
 <body>
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MFQFB53K"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    
     <div class="message">
         <h1>Thank you for submitting your details!</h1>
         <p>A representative will get back to you in the next few hours.</p>
